objects/Invalid_Phrase_Characters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Created for CR-20150831-9207. Custom setting to hold the invalid phrase/character values. Will be helpful while applying validation for fields values.</description>
    <fields>
        <fullName>Applicable_For__c</fullName>
        <description>Will hold the fields API name comma separated string, for whom the invalid phrase check logic will execute. Created for CR-20160219-9621.</description>
        <label>Applicable For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invalid_Phrase__c</fullName>
        <description>Created for CR-20150831-9207. Will hold the invalid phrase value.</description>
        <inlineHelpText>Created for CR-20150831-9207. Will hold the invalid phrase value.</inlineHelpText>
        <label>Invalid Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Created for CR-20150831-9207. Will hold the object API Name string.</description>
        <inlineHelpText>Will hold the object API Name string.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invalid Phrase/Characters</label>
</CustomObject>